Fixes and Bugs (#169)
* Control Panel UI fixes, CSS & Main UI fixes

* Removed line of code that needed to be in VolumeSliderHandler

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -224,7 +224,8 @@
         "buttons": {
             "cancel": "Cancel",
             "clear": "Clear",
-            "submit": "Submit"
+            "submit": "Submit",
+            "preview": "Preview"
         },
         "chatcustomizations": {
             "description": "Customize your chat with emojis, notifications, markdown, and other features",
